tests/errors/no-drive.expect
---CODE---
1
---STDERR---
Error: 
8 |    group no_drive {
  |          ^^^^^^^^ [Papercut] Required signal not driven inside the group.
When driving the signal `r.in' the signal `r.write_en' must also be driven. The primitive type `std_reg' requires this invariant.
